# RustPlayer

./: Cargo.toml
src/: app.rs  config.rs  main.rs
src/handler/: fs.rs  gap.rs  mod.rs  music_controller.rs  player.rs  repetition.rs
src/media/: media.rs  player.rs
src/ui/: fs.rs  gap.rs  help.rs  mod.rs  music_board.rs  progress.rs  repetition.rs
