[package]
name = "rustplayer"
version = "1.1.2"
edition = "2021"
description = "Music/Radio Player built by Rust"
authors = ["KetaNetwork"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

tui = "0.19.0"
crossterm = "0.25.0"

rodio = { version = "0.17", features = ["mp3", "wav", "flac"] }
mp3-duration = "0.1.10"

failure = "0.1.8"

open = "2.1.0"

regex = "1.5.4"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

dirs = "4.0.0"

bytes = "1.1.0"
lazy_static = "1.4.0"
